<resources>
    <string name="app_name">Wak\u0113</string>
    <string name="title_activity_main">Wak\u0113</string>
    <string name="title_activity_onboarding">Setup</string>
    <string name="auth0_client_id">L09vanK6EY1K000UMoRsO3tjysXH5HY6</string>
    <string name="auth0_domain">wake.auth0.com</string>
    <string name="com_auth0_client_id">L09vanK6EY1K000UMoRsO3tjysXH5HY6</string>
    <string name="com_auth0_domain">wake.auth0.com</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="google_server_client_id">272046375582-grovj0gbc3eke2uivqu1u2qlbnpjm3tu.apps.googleusercontent.com</string>
    <string name="gms_project_number">272046375582</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="title_activity_alarms">AlarmsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="title_first_section">Setup</string>
    <string name="setup_section_install">Install Wak\u0113</string>
    <string name="setup_section_connect">Connect to Wak\u0113</string>
    <string name="setup_section_connection_status">Not Connected</string>
    <string name="setup_section_bed">Side of Bed</string>
    <string name="setup_section_bed_summary">When in bed, what side of the bed are you generally closest to?</string>
    <string-array name="setup_section_side_of_bed_values">
        <item>Left side</item>
        <item>Right side</item>
        <item>I have the bed to myself</item>
    </string-array>
    <string name="setup_section_timezone">Timezone</string>
    <string name="setup_section_emails">Wak\u0113 Update Emails</string>
    <string name="setup_section_help">Help</string>


    <string name="title_second_section">Secondary User</string>
    <string name="secondary_user_section_add">Add Secondary User</string>
    <string name="secondary_user_section_remove">Remove Secondary User</string>

    <string name="title_third_section">More Information</string>
    <string name="more_info_section_terms">Terms &amp; Conditions</string>
    <string name="terms_confirmation_statement">I have read and agree to the Terms &amp; Conditions and the Privacy Statement for the Wak\u0113 app</string>
    <string name="more_info_section_privacy">Privacy Statement</string>
    <string name="wake_terms_and_conditions_url"><a href="https://luceralabs.com/terms.html">Terms &amp; Conditions</a></string>
    <string name="wake_privacy_statement_url"><a href ="https://luceralabs.com/privacy.html">Privacy Statement</a></string>
    <string name="wake_terms_and_conditions_base_url">https://luceralabs.com/terms.html</string>
    <string name="wake_privacy_statement_base_url">https://luceralabs.com/privacy.html</string>

    <string name="onboarding_welcome">Welcome to Wak\u0113</string>
    <string name="onboarding_prompt">It looks like you don\'t have a Wak\u0113 associated with your account. Would you like to set up a new Wak\u0113 or associate your account with a Wak\u0113 that has already been set up?</string>
    <string name="onboarding_primary">Set Up New Wak\u0113</string>
    <string name="onboarding_primary_back">Back</string>
    <string name="onboarding_primary_finish">Finish</string>
    <string name="onboarding_secondary">Associate Existing Wak\u0113</string>
    <string name="secondary_onboarding_prompt">Enter the access code for your Wak\u0113 generated by the other Wak\u0113 user</string>
    <string name="secondary_onboarding_placeholder">Enter Code</string>
    <string name="secondary_onboarding_submit">Submit</string>
    <string name="account_sign_out">Sign Out</string>

    <string name="error_no_core_id">Please complete the Connect to Wak\u0113 step before finishing</string>
    <string name="error_no_side_of_bed">Please set the Side of Bed preference before finishing</string>
    <string name="error_no_code">Please enter the access code for your Wak\u0113 generated by the other Wak\u0113 user</string>

    <string name="wake_device_status_title">Wakē Status</string>
    <string name="offline_wake_device_status_message">Your unit is not online. Please plug in your unit and switch it on. If your unit is still offline after doing so, check your internet connection and reconnect the Wakē. If the problem persists, please contact Lucera Labs.</string>
    <string name="error_wake_device_status_message">Your Wakē is in an errored state. Please contact Lucera Labs for assistance.</string>
    <string name="startup_wake_device_status_message">Your Wakē is connected to the internet and is starting up.</string>
    <string name="idle_wake_device_status_message">Your Wakē is connected to the internet and ready to alarm.</string>
    <string name="scanning_wake_device_status_message">Your Wakē is scanning the bed for a target.</string>
    <string name="alarming_wake_device_status_message">Your Wakē is attempting to wake up its target.</string>
    <string name="snoozing_wake_device_status_message">Your Wakē is waiting to alarm again.</string>
    <string name="hibernating_wake_device_status_message">Your Wakē is in a deep sleep in order to conserve battery power. Your unit is currently disconnected from the network but will reconnect to the network periodically in order to check for upcoming alarms.</string>
    <string name="reconnecting_wake_device_status_message">Your Wakē is attempting to reconnect to the internet.</string>
    <string name="unknownn_wake_device_status_message">The status of your Wakē is unknown. Please contact Lucera Labs for assistance.</string>

    <string-array name="audio_array">
        <item>Groove</item>
        <item>Move</item>
        <item>Natural</item>
        <item>Rise</item>
        <item>Stroll</item>
        <item>Sunshine</item>
        <item>Alert</item>
    </string-array>


</resources>
