<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="root_pref">

    <PreferenceCategory
        android:title="@string/title_first_section">

        <Preference
            android:key="install_preference"
            android:title="@string/setup_section_install"
            android:summary="View"
            android:fragment="com.lucerlabs.wake.ScreenSlidePageFragment"/>

        <Preference
            android:key="connect_preference"
            android:title="@string/setup_section_connect"
            android:summary="@string/setup_section_connection_status"/>

        <ListPreference
            android:key="side_of_bed_preference"
            android:title="@string/setup_section_bed"
            android:summary="Not Set"
            android:entryValues="@array/setup_section_side_of_bed_values"
            android:entries="@array/setup_section_side_of_bed_values"
            android:dialogTitle="@string/setup_section_bed_summary"/>

        <ListPreference
            android:key="timezone_preference"
            android:title="@string/setup_section_timezone"/>

        <Preference
            android:key="help_preference"
            android:title="@string/setup_section_help"/>

    </PreferenceCategory>

</PreferenceScreen>
