<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/onboarding_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:text="@string/onboarding_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:text="@string/onboarding_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/primary_user_button"/>

        <Button
            android:text="@string/onboarding_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secondary_user_button"/>

        <Button
            android:text="@string/account_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"/>
    </LinearLayout>
</LinearLayout>
