<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/onboarding_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:text="@string/secondary_onboarding_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/secondary_onboarding_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secondary_onboarding_placeholder"/>

    <Button
        android:text="@string/secondary_onboarding_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondary_onboarding_submit_button"/>
</LinearLayout>
